[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/WigglyCurvesRegular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/StartScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/CloisterBlackLight-axjg.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 120
font_data = ExtResource( 3 )

[node name="StartScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="LoadingLabel" type="Label" parent="."]
margin_left = 512.0
margin_top = 376.0
margin_right = 760.0
margin_bottom = 424.0
custom_fonts/font = SubResource( 2 )
text = "Loading..."
align = 1
valign = 1

[node name="PlayButton" type="Button" parent="."]
margin_left = 512.0
margin_top = 368.0
margin_right = 768.0
margin_bottom = 428.0
custom_fonts/font = SubResource( 1 )
text = "Play"
icon_align = 1

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TitleLabel" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 352.0
custom_fonts/font = SubResource( 3 )
text = "Crystal Battle"
align = 1
valign = 1

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
